// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TermToggleGroupFilter render - active 1`] = `
Array [
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={true}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    type="button"
  >
    Kibana
  </EuiFilterButton>,
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    type="button"
  >
    Elasticsearch
  </EuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render - active negated - custom negated name 1`] = `
Array [
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={true}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    type="button"
  >
    -Kibana
  </EuiFilterButton>,
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    type="button"
  >
    Elasticsearch
  </EuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render - active negated 1`] = `
Array [
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={true}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    type="button"
  >
    Not Kibana
  </EuiFilterButton>,
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    type="button"
  >
    Elasticsearch
  </EuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render 1`] = `
Array [
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    type="button"
  >
    Kibana
  </EuiFilterButton>,
  <EuiFilterButton
    color="text"
    grow={true}
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    type="button"
  >
    Elasticsearch
  </EuiFilterButton>,
]
`;
